# piyopiyo-rs

./: Cargo.toml  LICENSE
crates/piyopen/: Cargo.toml
crates/piyopen/src/: app.rs  config.rs  draw_widgets.rs  main.rs
crates/piyopen/src/app/: central_panel.rs  piano_roll.rs  top_panel.rs
src/: lib.rs  player.rs  read_cursor.rs  song.rs  track.rs
src/track/: melody.rs  percussion.rs
